--- a/js/001/index.html
+++ b/js/001/index.html
@@ -16,7 +16,7 @@
     </script>
 
     <script id="fs-plane" type="x-shader/x-fragment">
-      precision mediump float;
+      precision highp float;
       uniform float time;
       uniform vec2 resolution;
 
@@ -26,7 +26,7 @@
 
       void main(){
         vec2 p = (gl_FragCoord.xy * 2.0 - resolution)/min(resolution.x, resolution.y);
-        gl_FragColor = vec4(0.3 * sin(time * 0.5) * rand(p), 0.3 * sin(time * 0.5) * rand(p), 0.3 * sin(time * 0.5) * rand(p), 1.0);
+        gl_FragColor = vec4(0.3 * sin(time * 0.1) * rand(p), 0.3 * sin(time * 0.1) * rand(p), 0.3 * sin(time * 0.1) * rand(p), 1.0);
       }
     </script>
 
