--- a/js/003/index.html
+++ b/js/003/index.html
@@ -12,9 +12,11 @@
       <canvas id="canvas"></canvas>
     </div>
 
+    <script src="./assets/js/libs/minMatrix.js"></script>
     <script src="./assets/js/utils/xhr.js"></script>
     <script src="./assets/js/utils/funcGL.js"></script>
     <script src="./assets/js/classes/ProgramParameter.js"></script>
+    <script src="./assets/js/classes/InteractionCamera.js"></script>
     <script src="./assets/js/classes/CoreGL.js"></script>
     <script defer src="./assets/js/app.js"></script>
   </body>
