master: #4 ポストプロセスのリサイズ調整、stats.js・dat.gui追加

--- a/js/004/index.html
+++ b/js/004/index.html
@@ -12,6 +12,8 @@
       <canvas id="canvas"></canvas>
     </div>
 
+    <script src="./assets/js/libs/stats.min.js"></script>
+    <script src="./assets/js/libs/dat.gui.min.js"></script>
     <script src="./assets/js/libs/minMatrix.js"></script>
     <script src="./assets/js/utils/xhr.js"></script>
     <script src="./assets/js/utils/glFunction.js"></script>
