master: #4 サンプル作成、ディレクトリ変更

--- a/js/001/index.html
+++ b/js/001/index.html
@@ -78,9 +78,9 @@
 
     <div id="container"></div>
 
-    <script src="./assets/js/libs/TweenMax.min.js"></script>
-    <script src="./assets/js/libs/three.min.js"></script>
-    <script src="./assets/js/libs/OrbitControls.js"></script>
+    <script src="../assets/js/libs/TweenMax.min.js"></script>
+    <script src="../assets/js/libs/three.min.js"></script>
+    <script src="../assets/js/libs/OrbitControls.js"></script>
     <script defer src="./assets/js/app.js"></script>
   </body>
 </html>
