--- a/js/002/index.html
+++ b/js/002/index.html
@@ -109,9 +109,9 @@
 
     <button class="btn">SWITCH</button>
 
-    <script src="./assets/js/libs/TweenMax.min.js"></script>
-    <script src="./assets/js/libs/three.min.js"></script>
-    <script src="./assets/js/libs/OrbitControls.js"></script>
+    <script src="../assets/js/libs/TweenMax.min.js"></script>
+    <script src="../assets/js/libs/three.min.js"></script>
+    <script src="../assets/js/libs/OrbitControls.js"></script>
     <script defer src="./assets/js/app.js"></script>
   </body>
 </html>
