--- a/js/004/index.html
+++ b/js/004/index.html
@@ -10,15 +10,19 @@
   <body>
     <div id="container">
       <canvas id="canvas"></canvas>
+
+      <div class="circle">
+        <div class="circle__content">Click!</div>
+      </div>
     </div>
 
-    <script src="./assets/js/libs/stats.min.js"></script>
-    <script src="./assets/js/libs/dat.gui.min.js"></script>
-    <script src="./assets/js/libs/minMatrix.js"></script>
-    <script src="./assets/js/utils/xhr.js"></script>
-    <script src="./assets/js/utils/glFunction.js"></script>
-    <script src="./assets/js/classes/ProgramParameter.js"></script>
-    <script src="./assets/js/classes/InteractionCamera.js"></script>
+    <script src="../assets/js/libs/stats.min.js"></script>
+    <script src="../assets/js/libs/dat.gui.min.js"></script>
+    <script src="../assets/js/libs/minMatrix.js"></script>
+    <script src="../assets/js/utils/xhr.js"></script>
+    <script src="../assets/js/utils/glFunction.js"></script>
+    <script src="../assets/js/classes/ProgramParameter.js"></script>
+    <script src="../assets/js/classes/InteractionCamera.js"></script>
     <script src="./assets/js/classes/CoreGL.js"></script>
     <script defer src="./assets/js/app.js"></script>
   </body>
